--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>BEE PROJECT</title>
+    <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
 <h1>Coucou les abeilles.</h1>
@@ -12,5 +13,8 @@
   <li>Butiner</li>
   <li>Retour</li>
 </ul>
+
+
+
   </body>
 </html>
