Squelette du site
Image+Header+Footer+Contenu, manque juste les vidéos, et besoin de revenir sur le header

--- a/etape3.html
+++ b/etape3.html
@@ -3,18 +3,47 @@
   <head>
     <meta charset="utf-8">
     <title>BEE PROJECT</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="shortcut icon" href="images/bee.gif">
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/main2.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body>
-<h1>Coucou les abeilles.</h1>
-<ul>
-  <li>Départ</li>
-  <li>Trouver une fleur</li>
-  <li>Butiner</li>
-  <li>Retour</li>
-</ul>
+<header>
+  <div class="logo">
+    <img src="images/bee.gif" alt="" onmouseover="this.src='images/beehover.gif';" onmouseout="this.src='images/bee.gif';">
+  </div>
+
+  <ul>
+    <li><a href="index.html">START</a></li>
+    <li><a href="etape1.html">FIRST</a></li>
+    <li><a href="etape2.html">SECOND</a></li>
+    <li><a href="etape3.html">THIRD</a></li>
+    <li><a href="etape4.html">FOURTH</a></li>
+  </ul>
 
 
+</header>
+
+
+
+<img src="images/video.png" alt="" class="videobang">
+<div class="imagetext">
+    <img src="images/plan3.png" alt="" class="texte"></div>
+
+    <div class="direction">
+      <a href="etape2.html"><img src="images/gauche.png" alt="" onmouseover="this.src='images/gaucheh.png';" onmouseout="this.src='images/gauche.png';"></a>
+      <a href="etape4.html"><img src="images/droite.png" alt="" onmouseover="this.src='images/droiteh.png';" onmouseout="this.src='images/droite.png';"></a>
+    </div>
 
   </body>
 </html>
+
+<!--   <ul>
+
+    <li> <a href="index.html"><img src="images/start.png" alt="" onmouseover="this.src='images/hover.png';" onmouseout="this.src='images/start.png';"></a> </li>
+    <li> <a href="etape1.html"><img src="images/firsth.png" alt="" onmouseover="this.src='images/first.png';" onmouseout="this.src='images/firsth.png';"></a></li>
+    <li><a href="etape2.html"><img src="images/second.png" alt="" onmouseover="this.src='images/secondh.png';" onmouseout="this.src='images/second.png';"></a></li>
+    <li><a href="etape3.html"><img src="images/third.png" alt="" onmouseover="this.src='images/thirdh.png';" onmouseout="this.src='images/third.png';"></a></li>
+    <li><a href="etape4.html"><img src="images/fourth.png" alt="" onmouseover="this.src='images/fourthh.png';" onmouseout="this.src='images/fourth.png';"></a></li>
+  </ul> -->
