--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>BEE PROJECT</title>
+    <link rel="shortcut icon" href="images/bee.gif">
+    <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
   </head>
   <body>
-<h1>Coucou les abeilles.</h1>
-<ul>
-  <li>Départ</li>
-  <li>Trouver une fleur</li>
-  <li>Butiner</li>
-  <li>Retour</li>
-</ul>
+    
 
+<div class="img">
+  <img src="images/bee.gif" alt="" onmouseover="this.src='images/beehover.gif';" onmouseout="this.src='images/bee.gif';" ></div>
 
-
+  <div class="button">
+  <a href="etape1.html"><img src="images/start.png" alt="" onmouseover="this.src='images/hover.png';" onmouseout="this.src='images/start.png';"></a>
+  </div>
   </body>
 </html>
