--- a/etape1.html
+++ b/etape1.html
@@ -27,7 +27,14 @@
 
 
 
-<img src="images/video.png" alt="" class="videobang">
+<video controls autoplay="true" loop>
+  <source src="media/etape1.mp4" type="media/mp4">
+  <source src="media/etape1.webm" type="video/webm">
+  <p>Your browser doesn't support HTML5 video. Here is
+     a <a href="myVideo.mp4">link to the video</a> instead.</p>
+</video>
+
+
 <div class="imagetext">
     <img src="images/plan1.png" alt="" class="texte"></div>
 
