--- a/etape1.html
+++ b/etape1.html
@@ -27,7 +27,7 @@
 
 
 
-<video controls autoplay="true" loop>
+<video autoplay="true" loop>
   <source src="media/etape1.mp4" type="media/mp4">
   <source src="media/etape1.webm" type="video/webm">
   <p>Your browser doesn't support HTML5 video. Here is
