--- a/etape3.html
+++ b/etape3.html
@@ -27,7 +27,13 @@
 
 
 
-<img src="images/video.png" alt="" class="videobang">
+<video autoplay="true" loop>
+  <source src="media/etape3.mp4" type="media/mp4">
+  <source src="media/etape3.webm" type="video/webm">
+  <p>Your browser doesn't support HTML5 video. Here is
+     a <a href="myVideo.mp4">link to the video</a> instead.</p>
+</video>
+
 <div class="imagetext">
     <img src="images/plan3.png" alt="" class="texte"></div>
 
