--- a/etape3.html
+++ b/etape3.html
@@ -42,6 +42,8 @@
       <a href="etape4.html"><img src="images/droite.png" alt="" onmouseover="this.src='images/droiteh.png';" onmouseout="this.src='images/droite.png';"></a>
     </div>
 
+      <div class="element"> <a href="bang.html"> <img src="images/bang.png" alt="" onmouseover="this.src='images/banghover.png';" onmouseout="this.src='images/bang.png';"> </a> </div>
+
   </body>
 </html>
 
