--- a/etape4.html
+++ b/etape4.html
@@ -26,8 +26,13 @@
 </header>
 
 
+<video autoplay="true" loop>
+  <source src="media/etape4.mp4" type="media/mp4">
+  <source src="media/etape4.webm" type="video/webm">
+  <p>Your browser doesn't support HTML5 video. Here is
+     a <a href="myVideo.mp4">link to the video</a> instead.</p>
+</video>
 
-<img src="images/video.png" alt="" class="videobang">
 <div class="imagetext">
     <img src="images/plan4.png" alt="" class="texte"></div>
 
@@ -35,6 +40,8 @@
       <a href="etape3.html"><img src="images/gauche.png" alt="" onmouseover="this.src='images/gaucheh.png';" onmouseout="this.src='images/gauche.png';"></a>
       <a href="index.html"><img src="images/droite.png" alt="" onmouseover="this.src='images/droiteh.png';" onmouseout="this.src='images/droite.png';"></a>
     </div>
+
+    <div class="element"> <a href="bang.html"> <img src="images/bang.png" alt="" onmouseover="this.src='images/banghover.png';" onmouseout="this.src='images/bang.png';"> </a> </div>
 
   </body>
 </html>
