--- a/etape1.html
+++ b/etape1.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body>
+
 <header>
   <div class="logo">
     <img src="images/bee.gif" alt="" onmouseover="this.src='images/beehover.gif';" onmouseout="this.src='images/bee.gif';">
@@ -44,6 +45,13 @@
     </div>
 
       <div class="element"> <a href="bang.html"> <img src="images/bang.png" alt="" onmouseover="this.src='images/banghover.png';" onmouseout="this.src='images/bang.png';"> </a> </div>
+
+      <audio controls="controls">
+        <source src="audio/bourvil.mp3" type="audio/mp3" />
+        Votre navigateur n'est pas compatible
+      </audio>
+
+
 
   </body>
 </html>
