--- a/etape3.html
+++ b/etape3.html
@@ -44,6 +44,12 @@
 
       <div class="element"> <a href="bang.html"> <img src="images/bang.png" alt="" onmouseover="this.src='images/banghover.png';" onmouseout="this.src='images/bang.png';"> </a> </div>
 
+
+      <audio controls="controls">
+        <source src="audio/bourvil.mp3" type="audio/mp3" />
+        Votre navigateur n'est pas compatible
+      </audio>
+
   </body>
 </html>
 
