--- a/etape1.html
+++ b/etape1.html
@@ -51,16 +51,7 @@
         Votre navigateur n'est pas compatible
       </audio>
 
-
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
   </body>
 </html>
-
-<!--   <ul>
-
-    <li> <a href="index.html"><img src="images/start.png" alt="" onmouseover="this.src='images/hover.png';" onmouseout="this.src='images/start.png';"></a> </li>
-    <li> <a href="etape1.html"><img src="images/firsth.png" alt="" onmouseover="this.src='images/first.png';" onmouseout="this.src='images/firsth.png';"></a></li>
-    <li><a href="etape2.html"><img src="images/second.png" alt="" onmouseover="this.src='images/secondh.png';" onmouseout="this.src='images/second.png';"></a></li>
-    <li><a href="etape3.html"><img src="images/third.png" alt="" onmouseover="this.src='images/thirdh.png';" onmouseout="this.src='images/third.png';"></a></li>
-    <li><a href="etape4.html"><img src="images/fourth.png" alt="" onmouseover="this.src='images/fourthh.png';" onmouseout="this.src='images/fourth.png';"></a></li>
-  </ul> -->
