--- a/etape1.html
+++ b/etape1.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>BEE PROJECT</title>
+    <script type="text/javascript" src="script/main.js">
+
+    </script>
     <link rel="shortcut icon" href="images/bee.gif">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/main2.css">
@@ -44,14 +47,16 @@
       <a href="etape2.html"><img src="images/droite.png" alt="" onmouseover="this.src='images/droiteh.png';" onmouseout="this.src='images/droite.png';"></a>
     </div>
 
-      <div class="element"> <a href="bang.html"> <img src="images/bang.png" alt="" onmouseover="this.src='images/banghover.png';" onmouseout="this.src='images/bang.png';"> </a> </div>
+      <div class="element"> <a href="bang.html"> <img src="images/bang.png" alt="" onmouseover="this.src='images/banghover.png';" onmouseout="this.src='images/bang.png';"> </a>
+      <audio id="audioPlayer">
+          <source src="audio/bourvil.mp3">
+      </audio>
+<img class="control" onclick="play('audioPlayer', this)" src="images/play.png" onmouseover="this.src='images/pause.png';" onmouseout="this.src='images/play.png';"></img>
+</div>
 
-      <audio controls="controls">
+    <!--  <audio controls="controls">
         <source src="audio/bourvil.mp3" type="audio/mp3" />
         Votre navigateur n'est pas compatible
-      </audio>
+      </audio> -->
 
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-
-  </body>
 </html>
